--- a/Admin.Web.UI/Web.config
+++ b/Admin.Web.UI/Web.config
@@ -51,6 +51,6 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-    <add name="MyCon" connectionString="metadata=res://*/Models.NortModel.csdl|res://*/Models.NortModel.ssdl|res://*/Models.NortModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WISSEN\MSSQL2017;initial catalog=ASPMarketDb;persist security info=True;user id=oguz;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyCon" connectionString="Data Source=WISSEN\MSSQL2017;Initial Catalog=ASPMarketDb;User ID=oguz;Password=123456;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
