--- a/Admin.Web.UI/Admin.Web.UI.csproj
+++ b/Admin.Web.UI/Admin.Web.UI.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PartialController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -237,6 +238,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Category\Add.cshtml" />
     <Content Include="Views\Home\Error.cshtml" />
+    <Content Include="Views\Category\Update.cshtml" />
+    <Content Include="Views\Product\Add.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
