--- a/Admin.Web.UI/Web.config
+++ b/Admin.Web.UI/Web.config
@@ -53,4 +53,7 @@
 <connectionStrings>
     <add name="MyCon" connectionString="Data Source=WISSEN\MSSQL2017;Initial Catalog=ASPMarketDb;User ID=oguz;Password=123456;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="MyCon" connectionString="Data Source=78.188.98.162;initial catalog=MarketDb;persist security info=True;user id=mesut;password=1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
 </configuration>
