--- a/Admin.Models/Admin.Models.csproj
+++ b/Admin.Models/Admin.Models.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Enums\OrderTypes.cs" />
     <Compile Include="Enums\ProductTypes.cs" />
+    <Compile Include="Models\BarcodeResult.cs" />
+    <Compile Include="Models\ResponseData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\ErrorViewModel.cs" />
