--- a/Admin.Web.UI/Admin.Web.UI.csproj
+++ b/Admin.Web.UI/Admin.Web.UI.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\Audio\beep.mp3" />
     <Content Include="assets\css\app-custom.css" />
     <Content Include="assets\css\app.css" />
     <Content Include="assets\css\bootstrap.css" />
@@ -249,7 +250,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
